-global search
-link email (Pro only)
-Better auto add contacts in mail
*Birthday events
*Configure which calendars show on summary screen
-TNEF (Winmail.dat) support
-Reports module to show different queries on addressbook. Can also be used to send
 mailings with MS Office, Open-Office and the GO e-mail client. Replaces old mailing 
 system (Pro only)


CHANGELOG

2006/03/08 Version 2.16-12
-Fixed mailto links in e-mail
-Don't set session.save_path because PHP garbage collection doesnt work then 
 anymore. This resulted in a lot of session files in the tmp dir at some distro's
-Autocomplete users only put in a , in the text field. Also an Invalid XML bug was fixed.
-You didn't fill in all required fields bug at registration and profile update

Language updates:
-German language update
-Added Turkish language

2006/02/05 Version 2.16-11
-Fixed some corrupt files

2006/02/05 Version 2.16-10

Bug fixes:
-Files with quotes went wrong in filesystem
-Missing image for adding users
-html chars in pulldown of email module
-Allow duplicate email addresses with differt names in autocomplete
-Sync recurrence 1 day minus bug
-Double file properties bug
-E-mail attachment character encoding
-Email addresses character encoding
-Double frame on user profile close

Languages updated:
-Spanish
-French
-Catalan
-Hungarian
-Italian

2006/11/29 Version 2.16-4
-Translation module
-Speed optimizations



2006/11/01 Version 2.16-FINAL
-Disable user fields in admin mode
-Create pulldown menu's in custom fields. (Professional version)
-Custom fields for users (Professional version)
-Configure welcome e-mail on user registration
-Notify admin on user sign up
-Disable/enable fields for registration
-Book overlapping times in projects module
-Improved installer
-make compatible with register_globals=on

2006/09/13 Version 2.16-FC
-Small bug fixes
-Introduction of Gallery module

2006/08/31 Version 2.16-RC1
-Quotes/Invoices module (Professional version)