@@ -281,7 +281,7 @@ $strTableConfig='Tabel instellingen';
 $strMonthText='Maand tekst';
 $cmdUpload='Uploaden';
 $cmdAttachFile='Bestand bijvoegen';
-$search_text = 'Voer zoekterm in';
+$search_text = '<b>Tip:</b> Voer bij de zoekterm ook het type (contactpersoon, bedrijf, project etc.) van het item waar u naar zoekt wanneer u teveel resultaten krijgt';
 $search_global='Group-Office doorzoeken';
 $search_result='resultaat';
 $search_results='resultaten';
