@@ -184,5 +184,7 @@ $ml_messages_linked = 'De geselecteerde berichten zijn gekoppeld';
 $ml_handle_originals='Wat wilt u met de orginele berichten doen?';
 $ml_keep='Bewaren';
 $ml_examine_headers='Toon paperclip wanneer een bericht bijlagen bevat en toon de prioriteit van een bericht. Waarschuwing! Dit vertraagt het tonen van de lijst van berichten.';
-$ml_show_attachments='Toon bijlagen en prioriteiten (trager)';
+$ml_show_attachments='Toon bijlagen en prioriteiten (langzamer)';
 $ml_unknown_reciepent='De ontvanger is onbekend. Vul gegevens in a.u.b.';
+$ml_auto_check='Controleer automatisch of er nieuwe berichten zijn';
+$ml_beep='Maak geluid als er nieuwe e-mail is';
