@@ -1,2 +1,2 @@
 <?php
-require($GO_MODULES->modules['filesystem']['path'].'filesystem.settings.inc');
+require_once($GO_MODULES->modules['filesystem']['path'].'filesystem.settings.inc');
